1. BUG FIX: readFile calls notify to alert any connection fetchers waiting on    this.  (Seemed to work before, but it shouldn't; must have been    a race condition.) 2. FIXED MEMORY LEAK: queue is now of fixed size (100), limiting the number    of entries in HostCatcher.  Towards that end, I changed the    representation of queue from List to Buffer.  Also, the GUI is only    notified when the host catcher is not full; this means the GUI does    not necessarily show what the host catcher contains! 3. Updated unit tests.